--- a/Contrived/Contrived.Data/Contrived.Data.csproj
+++ b/Contrived/Contrived.Data/Contrived.Data.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0-preview2-final" />
+    <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.0.0-beta.50" />
+  </ItemGroup>
+
 </Project>
