--- a/Contrived/Contrived.Web/Contrived.Web.csproj
+++ b/Contrived/Contrived.Web/Contrived.Web.csproj
@@ -6,7 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0-preview2-final" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.0.0-beta.50" />
+    <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.0.0-beta.50" />
   </ItemGroup>
 
   <ItemGroup>
