use db storage for profiling data

--- a/Contrived/Contrived.Web/appsettings.json
+++ b/Contrived/Contrived.Web/appsettings.json
@@ -1,4 +1,10 @@
 ﻿{
+  "MiniProfiler": {
+    "Enabled": false
+  },
+  "ConnectionStrings": {
+    "Contrived": "server=localhost\\sql2014;database=dbContrived;Trusted_Connection=yes"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
