--- a/Contrived/Contrived.Web/Contrived.Web.csproj
+++ b/Contrived/Contrived.Web/Contrived.Web.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.0.0-beta.50" />
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.0.0-beta.50" />
+    <PackageReference Include="MiniProfiler.Providers.SqlServer" Version="4.0.0-beta.50" />
   </ItemGroup>
 
   <ItemGroup>
